Convenient API for specifying SNI hostname (#14849) (#14853)